2004-04-02  JP Rosevear  <jpr@ximian.com>

	* configure.in: bump version, libtool number

2004-03-15  Dan Winship  <danw@ximian.com>

	* libsoup/soup-soap-message.c (soup_soap_message_persist): Fix up
	types to kill a warning with -Wall -O2

2004-03-05  JP Rosevear <jpr@ximian.com>

	* configure.in: bump version, libtool number

2004-03-02  Dan Winship  <danw@ximian.com>

	* libsoup/soup-dns.c (check_hostent): Only loop on EINTR if
	bytes_read is -1, since the value of errno is irrelevant when
	bytes_read is 0. Probably #54960.

2004-03-01  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.h: removed not-implemented function's
	prototype.

2004-02-27  Rodney Dawes  <dobey@ximian.com>

	* configure.in:
	* libsoup/Makefile.am: Use a different variable for linking to the
	static version of gnutls, so we don't pull the .a files into the .pc

	Fixes #53346

2004-02-20  Dan Winship  <danw@ximian.com>

	* libsoup/soup-message-io.c (read_metadata, read_body_chunk,
	write_data): Pass gsize *, not guint *, to soup_socket_read/write,
	to make this work on 64-bit platforms. (Grr. C type checking
	sucks.) #54631
	
	* tests/revserver.c: Likewise

2004-02-18  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #54512

	* libsoup/soup-soap-response.c (soup_soap_parameter_get_int_value):
	don't leak the value returned from xmlNodeGetContent().
	(soup_soap_parameter_get_string_value,
	soup_soap_parameter_get_property): return a g_strdup'ed
	string, not the value returned by xmlNodeGetContent, so that
	callers can use g_free, and not xmlFree.

	* libsoup/soup-soap-response.h: made soup_parameter_get_property
	not return const.

2004-02-17  Dan Winship  <danw@ximian.com>

	* libsoup/soup-soap-message.h (SOUP_IS_SOAP_MESSAGE_CLASS): Fix a
	typo. #54433, from Mariano Suarez-Alvarez.

	* libsoup/soup-soap-response.h (SOUP_IS_SOAP_RESPONSE_CLASS):
	Likewise

2004-02-17  Rodney Dawes  <dobey@ximian.com>

	* libsoup/soup-message.c (soup_message_new): HTTP connections require