@@ -1,3 +1,14 @@
+2004-04-15  Dan Winship  <danw@ximian.com>
+
+	* libsoup/soup-connection.c (soup_connection_connect_sync):
+	Connect to the socket's "disconnect" signal. (We were only doing
+	this from the async version before, which meant that synchronous
+	SoupConnections could outlive their sockets and start causing
+	errors.) #57004
+
+	* libsoup/soup-connection-ntlm.c (send_request): Remove the old
+	Authorization header before adding a new one.
+
 2004-04-02  JP Rosevear  <jpr@ximian.com>
 
 	* configure.in: bump version, libtool number
